# rstw

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: main.rs  options.yml
