[package]
name = "rstw"
version = "0.3.1"
authors = ["Masayuki Sunahara <tamanishi@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "4.3.12", features = ["derive"] }
serde = "1.0.171"
serde_json = "1.0.102"
serde_derive = "1.0.171"
# oauth-client = { git = "https://github.com/tamanishi/oauth-client-rs.git", rev = "aef64354b4688bf934ee4e24ef994c0e21ba9538" }
lazy_static = "1.4.0"
colored = "2.0.4"
reqwest = { version = "0.11.18", features = ["blocking", "multipart"] }
mime_guess = "2.0.4"
chrono = "0.4.26"
ring = "0.16.20"
oauth-client = "0.8.0"

